java 17, maven and modules, some related refactoring